# vibrant-rs

./: Cargo.toml
src/: lib.rs  palette.rs  vibrant.rs
