[package]
name = "vibrant"
version = "0.1.0"
authors = ["Pascal Hertleif <killercup@gmail.com>", "Till Schulte <till@s.chulte.de>"]
repository = "https://github.com/tooxo/vibrant-rs.git"
homepage = "https://github.com/tooxo/vibrant-rs.git"
license = "MIT"
readme = "README.md"
documentation = "http://killercup.github.io/vibrant-rs/"
description = "Extract vibrant colors from an image file."

[features]
default = []

[dependencies]
image = { version = "0.24.3", default-features = false }
color_quant = "1.1.0"
itertools = "0.10.3"
hsl = "0.1.1"
